compilateurDeca/src/test/deca/syntax/valid/sans_objet/exp_arithmetique.deca

// Description:
//
//Teste expression arithmetique avec priorité
// Historique:09/01/2026

{
    int x;
    x= 4-3*(2+1);
}