compilateurDeca/src/test/deca/syntax/invalid/sans_objet/exp_arithmetique.deca
// Description:
//    Sans-Objet 
//Teste expression arithmetique invalide
// Historique:
//    cree le 08/01/2026

{
    int x;
    x= 1+ ;
}
